fix(metric): address PR review comments